# advent_of_code_2024

./: .gitignore  Cargo.toml  README.md
src/day_01/puzzle_01/: main.rs
src/day_01/puzzle_02/: main.rs
src/day_02/puzzle_01/: main.rs
src/day_02/puzzle_02/: main.rs
src/day_03/puzzle_01/: main.rs
src/day_03/puzzle_02/: main.rs
src/day_04/puzzle_01/: main.rs
src/day_04/puzzle_02/: main.rs
src/day_05/puzzle_01/: main.rs
src/day_05/puzzle_02/: main.rs
src/day_06/puzzle_01/: main.rs
src/day_06/puzzle_02/: main.rs
src/day_07/puzzle_01/: main.rs
src/day_08/puzzle_01/: main.rs
src/day_08/puzzle_02/: main.rs
src/day_09/puzzle_01/: main.rs
src/day_09/puzzle_02/: main.rs
src/day_10/puzzle_01/: main.rs
src/day_10/puzzle_02/: main.rs
src/day_11/puzzle/: main.rs
src/day_12/puzzle_01/: main.rs
src/day_12/puzzle_02/: main.rs
src/day_13/puzzle_01/: main.rs
src/day_13/puzzle_02/: main.rs
src/day_14/puzzle_01/: main.rs
src/day_14/puzzle_02/: main.rs
src/day_15/puzzle_01/: main.rs
src/day_15/puzzle_02/: main.rs
src/day_16/puzzle_01/: main.rs
src/day_16/puzzle_02/: main.rs
src/day_17/puzzle_01/: main.rs
src/day_17/puzzle_02/: main.rs
src/day_18/puzzle_01/: main.rs
src/day_18/puzzle_02/: main.rs
src/day_19/puzzle_01/: main.rs
src/day_19/puzzle_02/: main.rs
src/day_20/puzzle_01/: main.rs
src/day_20/puzzle_02/: main.rs
