[package]
name = "puzzle_011"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01_01"
path = "src/day_01/puzzle_01/main.rs"

[[bin]]
name = "day01_02"
path = "src/day_01/puzzle_02/main.rs"

[[bin]]
name = "day02_01"
path = "src/day_02/puzzle_01/main.rs"

[[bin]]
name = "day02_02"
path = "src/day_02/puzzle_02/main.rs"

[[bin]]
name = "day03_01"
path = "src/day_03/puzzle_01/main.rs"

[[bin]]
name = "day03_02"
path = "src/day_03/puzzle_02/main.rs"

[[bin]]
name = "day04_01"
path = "src/day_04/puzzle_01/main.rs"

[[bin]]
name = "day04_02"
path = "src/day_04/puzzle_02/main.rs"

[[bin]]
name = "day05_01"
path = "src/day_05/puzzle_01/main.rs"

[[bin]]
name = "day05_02"
path = "src/day_05/puzzle_02/main.rs"

[[bin]]
name = "day06_01"
path = "src/day_06/puzzle_01/main.rs"

[[bin]]
name = "day06_02"
path = "src/day_06/puzzle_02/main.rs"

[[bin]]
name = "day07_01"
path = "src/day_07/puzzle_01/main.rs"

[[bin]]
name = "day07_02"
path = "src/day_07/puzzle_02/main.rs"

[[bin]]
name = "day08_01"
path = "src/day_08/puzzle_01/main.rs"

[[bin]]
name = "day08_02"
path = "src/day_08/puzzle_02/main.rs"


[dependencies]
regex = "1.11.1"
itertools = "0.13.0"