[package]
name = "puzzle_011"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01_01"
path = "src/day_01/puzzle_01/main.rs"

[[bin]]
name = "day01_02"
path = "src/day_01/puzzle_02/main.rs"

[[bin]]
name = "day02_01"
path = "src/day_02/puzzle_01/main.rs"

[[bin]]
name = "day02_02"
path = "src/day_02/puzzle_02/main.rs"

[[bin]]
name = "day03_01"
path = "src/day_03/puzzle_01/main.rs"

[[bin]]
name = "day03_02"
path = "src/day_03/puzzle_02/main.rs"

[[bin]]
name = "day04_01"
path = "src/day_04/puzzle_01/main.rs"

[[bin]]
name = "day04_02"
path = "src/day_04/puzzle_02/main.rs"

[[bin]]
name = "day05_01"
path = "src/day_05/puzzle_01/main.rs"

[[bin]]
name = "day05_02"
path = "src/day_05/puzzle_02/main.rs"

[[bin]]
name = "day06_01"
path = "src/day_06/puzzle_01/main.rs"

[[bin]]
name = "day06_02"
path = "src/day_06/puzzle_02/main.rs"

[[bin]]
name = "day07_01"
path = "src/day_07/puzzle_01/main.rs"

[[bin]]
name = "day07_02"
path = "src/day_07/puzzle_02/main.rs"

[[bin]]
name = "day08_01"
path = "src/day_08/puzzle_01/main.rs"

[[bin]]
name = "day08_02"
path = "src/day_08/puzzle_02/main.rs"

[[bin]]
name = "day09_01"
path = "src/day_09/puzzle_01/main.rs"

[[bin]]
name = "day09_02"
path = "src/day_09/puzzle_02/main.rs"

[[bin]]
name = "day10_01"
path = "src/day_10/puzzle_01/main.rs"

[[bin]]
name = "day10_02"
path = "src/day_10/puzzle_02/main.rs"

[[bin]]
name = "day11"
path = "src/day_11/puzzle/main.rs"

[[bin]]
name = "day12_01"
path = "src/day_12/puzzle_01/main.rs"

[[bin]]
name = "day12_02"
path = "src/day_12/puzzle_02/main.rs"

[[bin]]
name = "day13_01"
path = "src/day_13/puzzle_01/main.rs"

[[bin]]
name = "day13_02"
path = "src/day_13/puzzle_02/main.rs"

[[bin]]
name = "day14_01"
path = "src/day_14/puzzle_01/main.rs"

[[bin]]
name = "day14_02"
path = "src/day_14/puzzle_02/main.rs"

[[bin]]
name = "day15_01"
path = "src/day_15/puzzle_01/main.rs"

[[bin]]
name = "day15_02"
path = "src/day_15/puzzle_02/main.rs"

[[bin]]
name = "day16_01"
path = "src/day_16/puzzle_01/main.rs"

[[bin]]
name = "day16_02"
path = "src/day_16/puzzle_02/main.rs"

[[bin]]
name = "day17_01"
path = "src/day_17/puzzle_01/main.rs"

[[bin]]
name = "day17_02"
path = "src/day_17/puzzle_02/main.rs"

[[bin]]
name = "day18_01"
path = "src/day_18/puzzle_01/main.rs"

[[bin]]
name = "day18_02"
path = "src/day_18/puzzle_02/main.rs"

[[bin]]
name = "day19_01"
path = "src/day_19/puzzle_01/main.rs"

[[bin]]
name = "day19_02"
path = "src/day_19/puzzle_02/main.rs"

[[bin]]
name = "day20_01"
path = "src/day_20/puzzle_01/main.rs"

[[bin]]
name = "day20_02"
path = "src/day_20/puzzle_02/main.rs"

[dependencies]
regex = "1.11.1"
itertools = "0.14.0"
priority-queue = "2.1.1"
hashbrown = "0.3"
fxhash = "0.2.1"